# multi-lang-bazal-mono-repo

./: .gitignore  README.md  WORKSPACE.bazel
.github/workflows/: main.yml
projects/calculator/: BUILD.bazel  calculator.py  calculator_test.py
projects/my-python-app/: BUILD.bazel  main.py
projects/projectA/: BUILD.bazel
projects/projectB/: BUILD.bazel
